<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="UBazar"
           android:gravity="center"
           android:layout_gravity="center"
           android:textSize="70dp"
           android:textColor="@color/green"/>


        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:gravity="center"
            android:layout_gravity="center">

        </EditText>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_your_email_password"
            android:layout_gravity="center">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/forger_password"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_btn"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_with_googleBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_btn"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/sign_with_google" />

        <TextView
            android:id="@+id/createNewAccountAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/create_a_new_account"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
</layout>